Experimenting with native image build. Needed to fallback to using Java 11.