@@ -23,7 +23,8 @@ public class PersonService {
             row.get(COL_LAST_NAME, String.class)
     );
 
-    private static final String SELECT_BASE = "SELECT %s, %s, %s from %s".formatted(
+    private static final String SELECT_BASE = String.format(
+            "SELECT %s, %s, %s from %s",
             COL_ID, COL_FIRST_NAME, COL_LAST_NAME, TABLE_NAME);
 
     public PersonService(DatabaseClient databaseClient) {
@@ -31,7 +32,7 @@ public class PersonService {
     }
 
     public Mono<Person> get(long id) {
-        return databaseClient.sql("%s where %s=:id".formatted(SELECT_BASE, COL_ID))
+        return databaseClient.sql(String.format("%s where %s=:id", SELECT_BASE, COL_ID))
                 .bind("id", id)
                 .map(MAPPER)
                 .one();
@@ -44,8 +45,10 @@ public class PersonService {
     }
 
     public Mono<Person> create(String first, String last) {
-        return databaseClient.sql("INSERT INTO %s (%s, %s) VALUES (:first, :last)".formatted(
-                TABLE_NAME, COL_FIRST_NAME, COL_LAST_NAME))
+        return databaseClient.sql(
+                String.format(
+                        "INSERT INTO %s (%s, %s) VALUES (:first, :last)",
+                        TABLE_NAME, COL_FIRST_NAME, COL_LAST_NAME))
                 .filter(statement -> statement.returnGeneratedValues("id"))
                 .bind("first", first)
                 .bind("last", last)
@@ -54,8 +57,10 @@ public class PersonService {
     }
 
     public Mono<Person> update(long id, String first, String last) {
-        return databaseClient.sql("UPDATE %s SET %s=:first, %s=:last WHERE %s=:id".formatted(
-                TABLE_NAME, COL_FIRST_NAME, COL_LAST_NAME, COL_ID))
+        return databaseClient.sql(
+                String.format(
+                        "UPDATE %s SET %s=:first, %s=:last WHERE %s=:id",
+                        TABLE_NAME, COL_FIRST_NAME, COL_LAST_NAME, COL_ID))
                 .bind("id", id)
                 .bind("first", first)
                 .bind("last", last)
@@ -67,7 +72,10 @@ public class PersonService {
     }
 
     public Mono<Void> delete(long id) {
-        return databaseClient.sql("DELETE FROM %s WHERE %s=:id".formatted(TABLE_NAME, COL_ID))
+        return databaseClient.sql(
+                String.format(
+                        "DELETE FROM %s WHERE %s=:id",
+                        TABLE_NAME, COL_ID))
                 .bind("id", id)
                 .then();
     }
